--- a/css/index.css
+++ b/css/index.css
@@ -16,12 +16,33 @@ img {
   max-width: 100%;
 }
 
+input {
+  min-width: 264px;
+  width: 100%;
+  height: 40px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  outline: none;
+}
+
+textarea {
+  outline: none;
+}
+
 h1,
 h2,
 h3,
 p {
   margin: 0;
 }
+
+button {
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+}
+
 .url {
   color: #2e2f42;
   font-weight: 500;
@@ -59,6 +80,26 @@ p {
 .bottom-logo {
   display: inline-block;
   margin-bottom: 16px;
+}
+
+.button {
+  background-color: #4d5ae5;
+  color: #ffffff;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  line-height: 1.5;
+  font-weight: 500;
+  font-size: 16px;
+  border-radius: 4px;
+  min-width: 169px;
+}
+
+.button:focus {
+  background-color: #404bbf;
+}
+
+.button:hover {
+  background-color: #404bbf;
 }
 
 /* загальні  налаштування */
@@ -188,29 +229,13 @@ p {
 }
 
 .bluebutton {
-  background-color: #4d5ae5;
-  color: #ffffff;
-  cursor: pointer;
-  line-height: 1.5;
-  font-weight: 500;
   letter-spacing: 0.04em;
   padding: 16px 32px 16px 32px;
-  border-radius: 4px;
   margin-top: 48px;
   margin-left: auto;
   margin-right: auto;
   display: block;
-  min-width: 169px;
   height: 56px;
-  border: none;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.bluebutton:focus {
-  background-color: #404bbf;
-}
-
-.bluebutton:hover {
-  background-color: #404bbf;
 }
 
 /*==========================section---2===============================*/
@@ -301,7 +326,7 @@ p {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   height: 100%;
 }
 
@@ -438,4 +463,237 @@ p {
 .container-footer-flex {
   display: flex;
   align-items: baseline;
+}
+
+.footer-input {
+  background-color: #2e2f42;
+  border: 1px solid #ffffff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  padding: 8px 0 8px 16px;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.48px;
+}
+
+.footer-input::placeholder {
+  color: #ffffff;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.48px;
+}
+
+.footer-subscribe {
+  margin-bottom: 16px;
+}
+
+.form-button {
+  display: flex;
+  padding: 8px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  letter-spacing: 0.64px;
+  min-width: 165px;
+}
+
+.footer-telegram {
+  fill: #ffffff;
+}
+.footer-form {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 24px;
+  margin-left: 80px;
+}
+
+/* --------------------------------modal window------------------------------------ */
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  opacity: 0;
+  pointer-events: none;
+  transition: overlay 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-overlay.is-open {
+  opacity: 1;
+  pointer-events: initial;
+}
+
+.modal-container {
+  padding: 24px;
+  border-radius: 4px;
+  background-color: #fcfcfc;
+  max-width: 408px;
+  max-height: 584px;
+  width: 100%;
+  overflow-y: auto;
+}
+
+.modal-close-icon {
+  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close:focus,
+.modal-close:hover {
+  background-color: #4d5ae5;
+  border: 1px solid #4d5ae5;
+}
+
+.modal-close:focus .modal-close-icon,
+.modal-close:hover .modal-close-icon {
+  fill: #ffffff;
+}
+
+.modal-close {
+  margin-left: auto;
+  margin-bottom: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+  background-color: #e7e9fc;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1) background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal__title {
+  color: #2e2f42;
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  margin-bottom: 16px;
+}
+
+.input-group {
+  position: relative;
+}
+
+.input-group__icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-group__input {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  padding-left: 38px;
+  font-size: 12px;
+  line-height: 1.1;
+  letter-spacing: 0.48px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-group__input:focus {
+  border: 1px solid #4d5ae5;
+}
+
+.input-group__input:focus + .input-group__icon {
+  fill: #4d5ae5;
+}
+
+.textarea-form {
+  resize: none;
+  display: block;
+  height: 120px;
+  width: 100%;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  margin-bottom: 16px;
+  padding: 8px 16px;
+  font-size: 12px;
+  line-height: 1.1;
+  letter-spacing: 0.48px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.textarea-form::placeholder {
+  color: rgba(46, 47, 66, 0.4);
+  font-size: 12px;
+  line-height: 1.1;
+  letter-spacing: 0.48px;
+}
+
+.textarea-form:focus {
+  border: 1px solid #4d5ae5;
+}
+
+.label-text {
+  color: #8e8f99;
+  font-size: 12px;
+  font-style: normal;
+  line-height: 1.1;
+  letter-spacing: 0.48px;
+  margin-bottom: 4px;
+  display: block;
+}
+
+.input-label {
+  margin-bottom: 8px;
+  display: block;
+}
+
+.input-checkbox:checked + div {
+  background-color: #404bbf;
+}
+
+.checkbox-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  height: fit-content;
+  flex-shrink: 0;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+}
+
+.checkbox-icon {
+  fill: #f4f4fd;
+}
+
+.privacy-policy {
+  color: #4d5ae5;
+  font-size: 12px;
+  line-height: 1.3;
+  letter-spacing: 0.48px;
+  text-decoration-line: underline;
+}
+
+.checkbox-label {
+  display: flex;
+  justify-content: baseline;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 24px;
+}
+
+.privacy-policy__text {
+  margin-bottom: 0;
+}
+
+.send-button {
+  display: block;
+  margin: 0 auto;
+  padding: 16px 32px;
 }
