--- a/css/index.css
+++ b/css/index.css
@@ -466,13 +466,18 @@ button {
 }
 
 .footer-input {
-  background-color: #2e2f42;
+  width: 264px;
+  height: 40px; 
+  background-color: transparent;
   border: 1px solid #ffffff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   padding: 8px 0 8px 16px;
   font-size: 12px;
   line-height: 2;
-  letter-spacing: 0.48px;
+  letter-spacing: 0.4em;
+  padding-left: 16px; 
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
 }
 
 .footer-input::placeholder {
@@ -504,6 +509,10 @@ button {
   justify-content: center;
   align-items: flex-end;
   gap: 24px;
+  margin-left: 80px;
+}
+
+.footer-subscribe-wrapper{
   margin-left: 80px;
 }
 
