--- a/css/index.css
+++ b/css/index.css
@@ -466,9 +466,9 @@ button {
 }
 
 .footer-input {
-  color: #ffffff; 
+  color: #ffffff;
   width: 264px;
-  height: 40px; 
+  height: 40px;
   background-color: transparent;
   border: 1px solid #ffffff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
@@ -476,19 +476,17 @@ button {
   font-size: 12px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  padding-left: 16px; 
+  padding-left: 16px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
 }
 
 .footer-input::placeholder {
-  color: #ffffff; 
+  color: #ffffff;
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.48px;
 }
-
-
 
 .form-button {
   display: flex;
@@ -508,10 +506,9 @@ button {
   display: flex;
   justify-content: center;
   gap: 24px;
- 
 }
 
-.footer-subscribe-wrapper{
+.footer-subscribe-wrapper {
   margin-left: 80px;
 }
 
@@ -524,13 +521,11 @@ button {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-  display: flex;
-  justify-content: center;
-  align-items: center;
   z-index: 10;
   opacity: 0;
   pointer-events: none;
-  transition: overlay 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-overlay.is-open {
@@ -539,13 +534,20 @@ button {
 }
 
 .modal-container {
-  padding: 24px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  padding: 72px 24px 24px;
   border-radius: 4px;
   background-color: #fcfcfc;
   max-width: 408px;
   max-height: 584px;
   width: 100%;
   overflow-y: auto;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-icon {
@@ -555,8 +557,8 @@ button {
 
 .modal-close:focus,
 .modal-close:hover {
-  background-color: #4d5ae5;
-  border: 1px solid #4d5ae5;
+  background-color: #404bbf;
+  border: none;
 }
 
 .modal-close:focus .modal-close-icon,
@@ -565,6 +567,9 @@ button {
 }
 
 .modal-close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
   margin-left: auto;
   margin-bottom: 24px;
   display: flex;
@@ -575,7 +580,8 @@ button {
   background-color: #e7e9fc;
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1) background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal__title {
@@ -657,8 +663,11 @@ button {
   display: block;
 }
 
-.input-label {
+.input-wrapper {
   margin-bottom: 8px;
+}
+
+.input-label {
   display: block;
 }
 
