--- a/css/index.css
+++ b/css/index.css
@@ -615,7 +615,9 @@ button {
   font-size: 12px;
   line-height: 1.1;
   letter-spacing: 0.48px;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: transparent;
+ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ outline: transparent;  
 }
 
 .input-group__input:focus {
@@ -633,19 +635,25 @@ button {
   width: 100%;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
-  margin-bottom: 16px;
-  padding: 8px 16px;
+   padding: 8px 16px;
   font-size: 12px;
-  line-height: 1.1;
-  letter-spacing: 0.48px;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  background-color: transparent;
+  resize: none; 
+  outline: transparent;  
+}
+
+.comment-wrapper{
+  margin-bottom: 16px;
 }
 
 .textarea-form::placeholder {
   color: rgba(46, 47, 66, 0.4);
   font-size: 12px;
-  line-height: 1.1;
-  letter-spacing: 0.48px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
 }
 
 .textarea-form:focus {
@@ -656,8 +664,8 @@ button {
   color: #8e8f99;
   font-size: 12px;
   font-style: normal;
-  line-height: 1.1;
-  letter-spacing: 0.48px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
   margin-bottom: 4px;
   display: block;
 }
@@ -670,6 +678,10 @@ button {
 
 .input-checkbox:checked + div {
   background-color: #404bbf;
+}
+
+.checkbox-container{
+  margin-bottom: 24px;
 }
 
 .checkbox-wrapper {
@@ -691,7 +703,7 @@ button {
   color: #4d5ae5;
   font-size: 12px;
   line-height: 1.3;
-  letter-spacing: 0.48px;
+  letter-spacing: 0.04em;
   text-decoration-line: underline;
 }
 
@@ -700,7 +712,7 @@ button {
   justify-content: baseline;
   align-items: center;
   gap: 8px;
-  margin-bottom: 24px;
+ 
 }
 
 .privacy-policy__text {
