--- a/css/index.css
+++ b/css/index.css
@@ -616,8 +616,8 @@ button {
   line-height: 1.1;
   letter-spacing: 0.48px;
   background-color: transparent;
- transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
- outline: transparent;  
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: transparent;
 }
 
 .input-group__input:focus {
@@ -635,17 +635,17 @@ button {
   width: 100%;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
-   padding: 8px 16px;
+  padding: 8px 16px;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: transparent;
-  resize: none; 
-  outline: transparent;  
+  resize: none;
+  outline: transparent;
 }
 
-.comment-wrapper{
+.comment-wrapper {
   margin-bottom: 16px;
 }
 
@@ -674,18 +674,16 @@ button {
   margin-bottom: 8px;
 }
 
-
-
 .input-checkbox:checked + div {
   background-color: #404bbf;
 }
 
-.checkbox-container{
+.checkbox-container {
   margin-bottom: 24px;
 }
 
 .checkbox-wrapper {
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   width: fit-content;
@@ -693,11 +691,15 @@ button {
   flex-shrink: 0;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
+  width: 16px;
+  height: 16px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: transparent; 
 }
 
-.checkbox-icon {
-  fill: #f4f4fd;
-}
+
 
 .privacy-policy {
   color: #4d5ae5;
@@ -708,11 +710,10 @@ button {
 }
 
 .checkbox-label {
-  display: flex;
-  justify-content: baseline;
-  align-items: center;
-  gap: 8px;
- 
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
 }
 
 .privacy-policy__text {
