--- a/css/index.css
+++ b/css/index.css
@@ -680,7 +680,7 @@ button {
 }
 
 .checkbox-wrapper {
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   flex-shrink: 0;
